--- a/style.css
+++ b/style.css
@@ -240,13 +240,13 @@ main {
 }
 
 .post-header-image {
-    width: calc(100% + 8rem);
-    margin: -8rem -4rem 4rem -4rem;
+    width: 100%;
     height: 450px;
     object-fit: cover;
     display: block;
-    border-radius: 0 0 24px 24px;
-    box-shadow: 0 20px 50px rgba(0, 0, 0, 0.5);
+    border-radius: 24px;
+    margin-bottom: 3rem;
+    box-shadow: 0 20px 40px rgba(0, 0, 0, 0.3);
 }
 
 .post-content h2 {
