--- a/style.css
+++ b/style.css
@@ -277,7 +277,7 @@ main {
 }
 
 .post-content .media-block {
-    margin: 4rem -4rem;
+    margin: 3rem 0;
     border-radius: 24px;
     overflow: hidden;
     background: rgba(255, 255, 255, 0.03);
