--- a/style.css
+++ b/style.css
@@ -277,7 +277,8 @@ main {
 }
 
 .post-content .media-block {
-    margin: 3rem 0;
+    margin: 3rem auto;
+    max-width: 50%;
     border-radius: 24px;
     overflow: hidden;
     background: rgba(255, 255, 255, 0.03);
@@ -306,6 +307,7 @@ main {
 @media (max-width: 800px) {
     .post-content .media-block {
         margin: 3rem 0;
+        max-width: 100%;
         border-radius: 12px;
     }
 }
