--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-e:root {
+:root {
     --bg-color: #050505;
     --text-primary: #ffffff;
     --text-secondary: rgba(255, 255, 255, 0.6);
@@ -378,3 +378,4 @@ main {
         margin: 2.5rem 0;
     }
 }
+
