--- a/style.css
+++ b/style.css
@@ -28,9 +28,6 @@ body {
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
 }
 
 
@@ -288,6 +285,11 @@ main {
     width: 100%;
     display: block;
     transition: transform 1s ease;
+    cursor: pointer;
+}
+
+.post-content img {
+    cursor: pointer;
 }
 
 .post-content .media-block:hover img {
