--- a/style.css
+++ b/style.css
@@ -263,6 +263,22 @@ main {
     margin-bottom: 2.2rem;
 }
 
+.post-content ul,
+.post-content ol {
+    margin-bottom: 2.2rem;
+    padding-left: 1.5rem;
+}
+
+.post-content li {
+    margin-bottom: 0.8rem;
+    line-height: 1.6;
+}
+
+.post-content strong {
+    font-weight: 600;
+    color: #000;
+}
+
 .post-content blockquote {
     position: relative;
     padding: 2.5rem 0;
