--- a/style.css
+++ b/style.css
@@ -251,10 +251,12 @@ main {
 
 .post-frame {
     width: 100%;
+    height: 100%;
+    /* Full height for internal scrolling */
     border: none;
-    background: #ffffff;
+    background: #050505;
+    /* Default to dark to avoid flash */
     display: block;
-    min-height: 200px;
 }
 
 .post-content h1 {
